--- a/client/src/app/pages/positions/position-search/position-search.component.scss
+++ b/client/src/app/pages/positions/position-search/position-search.component.scss
@@ -858,7 +858,7 @@ $profile-form-field-mt: 30px;
                     float: none;
                     width: 92%;
                     margin: auto;
-                    padding: 0 10px;
+                    padding: 0;
 
                     & .select-style {
                         & .selectall {
