--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -287,7 +287,7 @@
             <mat-label>Years *</mat-label>
             <input matInput placeholder="Years *" type="text" formControlName="years" pattern="^\d+$">
             <mat-icon matSuffix *ngIf="preferredWorkExperienceFormArray.at(i).get('years').valid">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="!preferredWorkExperienceFormArray.at(i).get('years').valid && preferredWorkExperienceFormArray.at(i).get('years').touched">close</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="preferredWorkExperienceFormArray.at(i).get('years').value && !preferredWorkExperienceFormArray.at(i).get('years').valid && preferredWorkExperienceFormArray.at(i).get('years').touched">close</mat-icon>
           </mat-form-field>
         </div>
         <div class="profile-form__field textarea">
@@ -325,7 +325,7 @@
     </div>
   </div>
   <div class="container__full">
-    <action-button class="btn-next" type="flat" title="Next" color="primary" [disabled]="!(preferredWorkExperienceFormArray.valid && onCheckAllIndustriesValidation())" (click)="goToNextPage()" ></action-button>
+    <action-button class="btn-next" type="flat" title="Next" color="primary" [disabled]="!((preferred_work_experiences && preferred_work_experiences.length ===1 && !preferredWorkExperienceFormArray.at(0).value.industry && !preferredWorkExperienceFormArray.at(0).value.years && !preferredWorkExperienceFormArray.at(0).value.description && !preferred_work_experiences[0].skills_trained) || (preferredWorkExperienceFormArray.valid && onCheckAllIndustriesValidation()))" (click)="goToNextPage()" ></action-button>
   </div>
 </div>
 <!-- Preferred Work Experience End -->
