--- a/client/src/app/pages/positions/create-position/create-position.component.scss
+++ b/client/src/app/pages/positions/create-position/create-position.component.scss
@@ -102,10 +102,13 @@ p {
     position: relative;
     margin-top: $container-mt-desktop;
     action-button.btn-next {
-      min-width: 130px;
+      min-width: 125px;
       position: fixed;
-      bottom: 15%;
+      top:65vh;
       right: 2%;
+    }
+    action-button.btn-quit {
+      top: calc(65vh + 85px);
     }
     action-button.view-profile {
       margin-top: $profile-form-field-mt;
@@ -621,8 +624,7 @@ p {
       margin-top: $container-mt-tablet;
       action-button.btn-next {
         position: unset;
-        margin-top: 25px;
-        margin-bottom: 35px;
+        margin: 25px 10px 35px 10px;
       }
       .container__full {
         .profile-form {
@@ -702,7 +704,7 @@ p {
           width: 100%;
           max-width: $profile-form-max-width-mobile;
           padding: $profile-form-padding-mobile;
-          margin-bottom: 25px;
+          margin-bottom: 10px;
           &__field {
             width: 95%;
             &.border {
@@ -827,6 +829,8 @@ p {
       margin-top: 25px;
       action-button.btn-next {
         margin-top: 15px;
+        margin-right: 5px;
+        margin-left: 5px;
       }
       .container__full {
         .profile-form {
