company industry info

--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -496,7 +496,7 @@
         </div>
         <div class="position-info">
           <label>Industry</label>
-          <p>Industry</p>
+          <p>{{position_company ? position_company_info.main_industry_name : 'N/A'}}</p>
         </div>
         <div class="position-info">
           <label>Recruiter</label>
