Add amount symbol for salary field

--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -107,7 +107,8 @@
       <div class="profile-form__field">
         <mat-form-field class="bg-transparent" appearance="fill">
           <mat-label>Salary</mat-label>
-          <input matInput placeholder="Title" type="text" formControlName="position_salary">
+          <span matPrefix>$</span>
+          <input matInput placeholder="Salary" type="text" formControlName="position_salary">
         </mat-form-field>
       </div>
       <div class="profile-form__field">
