--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -517,7 +517,7 @@
         </div>
         <div class="position-info">
           <label>Education Level Required</label>
-          <p>Education</p>
+          <p>{{preferred_education_levels && preferred_education_levels.length > 0 ? preferred_education_levels[0].education_level : 'N/A'}}</p>
         </div>
       </div>
 		</div>
