create position as opened

--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -543,7 +543,7 @@
       </ng-container>
 
       <ng-container *ngIf="preferred_education_majors && preferred_education_majors.length > 0">
-        <h5>Preferred Major</h5>
+        <h5>Preferred Majors</h5>
         <div class="skills">
           <ng-container *ngFor="let preferred_education_major of preferred_education_majors">
             <simple-tag type="gray" title="{{preferred_education_major.major_name}}"></simple-tag>
