--- a/client/src/app/pages/positions/create-position/create-position-dialog.component.html
+++ b/client/src/app/pages/positions/create-position/create-position-dialog.component.html
@@ -1,8 +1,7 @@
 <mat-icon class="cancel" (click)="onClose()">cancel</mat-icon>
-<h3 mat-dialog-title>{{data.is_template ? 'Save as template' : 'Are you sure you want to quit?'}}</h3>
 
-
-<ng-container *ngIf="!data.is_template" >
+<ng-container *ngIf="data.category === 'quit'" >
+  <h3 mat-dialog-title>Are you sure you want to quit?</h3>
   <mat-dialog-content>
     <p class="description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore.</p>
   </mat-dialog-content>
@@ -12,7 +11,8 @@
   </mat-dialog-actions>
 </ng-container>
 
-<ng-container *ngIf="data.is_template" [formGroup]="templateNameForm">
+<ng-container *ngIf="data.category === 'template'" [formGroup]="templateNameForm">
+  <h3 mat-dialog-title>Save as template</h3>
   <mat-dialog-content>
     <div class="form-field">
       <mat-form-field class="bg-transparent" appearance="fill">
@@ -23,6 +23,17 @@
   </mat-dialog-content>
   <mat-dialog-actions>
     <action-button class="update-btn" type="flat" color="primary" title="Save As Template" [disabled]="!(templateNameForm.valid && template_name)" (click)="onClickSave()"></action-button>
+  </mat-dialog-actions>
+</ng-container>
+
+<ng-container *ngIf="data.category === 'skip'" >
+  <h3 mat-dialog-title>Are you sure you want to skip this step?</h3>
+  <mat-dialog-content>
+    <p class="description">Failing to include skills, education, interests, or experience items greatly reduces the visibility of your position post. In addition, minimal information may reduce the quality of candidates that apply for your position.</p>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <action-button class="update-btn" type="flat" color="primary" title="No" (click)="onClose()"></action-button>
+    <action-button class="update-btn" type="stroked" title="Yes" (click)="onClickSkip()"></action-button>
   </mat-dialog-actions>
 </ng-container>
 
