--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -330,7 +330,7 @@
   </div>
   <div class="container__full">
     <action-button class="btn-next" type="flat" title="Next" color="primary" [disabled]="!((preferred_work_experiences && preferred_work_experiences.length ===1 && !preferredWorkExperienceFormArray.at(0).value.industry && !preferredWorkExperienceFormArray.at(0).value.years && !preferredWorkExperienceFormArray.at(0).value.description && !preferred_work_experiences[0].skills_trained) || (preferredWorkExperienceFormArray.valid && onCheckAllIndustriesValidation()))" (click)="goToNextPage()" ></action-button>
-    <action-button class="btn-next btn-quit" type="stroked" title="Quit" (click)="openDialog(false)"></action-button>
+    <action-button class="btn-next btn-quit" type="stroked" title="Quit" (click)="onClickQuit()"></action-button>
   </div>
 </div>
 <!-- Preferred Work Experience End -->
@@ -342,6 +342,7 @@
       <h3 class="profile-form__title">
         SKILLS
       </h3>
+      <p class="headup">Increase search visibility and the quality of applicants by indicating your required and preferred skills.</p>
       <div class="profile-form__field search">
         <h3>Minimum Skills <span *ngIf="minimum_skills &&  minimum_skills.length > 0" class="count">{{minimum_skills.length}}</span></h3>
         <!-- <img src="assets/icons/ic_question.svg" (click)="openSkillDescriptionDialog()"> -->
