Add quit button in preview page

--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -490,6 +490,7 @@
         </div>
         <div class="position-status">
           <action-button type="flat" color="primary" [title]="position ? 'Published' : 'Publish'" (click)="onClickPublish()"></action-button>
+          <action-button type="flat" type="stroked" title="Quit" (click)="onClickQuit()"></action-button>
         </div>
       </div>
       <div class="position-row__details">
