--- a/client/src/app/pages/positions/create-position/create-position.component.scss
+++ b/client/src/app/pages/positions/create-position/create-position.component.scss
@@ -538,7 +538,7 @@ p {
       }
       action-button {
         display: inline-flex;
-        margin-right: 20px;
+        margin: 5px 10px;
       }
       a {
         font-size: 14px;
