Add change password functionality

--- a/client/src/app/pages/authentication/reset-password/reset-password.component.html
+++ b/client/src/app/pages/authentication/reset-password/reset-password.component.html
@@ -1,35 +1,82 @@
 <div class="container">
-  <ng-container *ngIf="!is_done">
-    <div class="form password-reset" [formGroup]="passwordResetForm">
-      <h2 class="title">Reset Password Form</h2>
-      <div class="row__field new">
-        <mat-form-field class="bg-transparent" appearance="fill">
-          <mat-label>New Password *</mat-label>
-          <input matInput placeholder="New Password" type="password" formControlName="new_password">
-          <span matSuffix *ngIf="passwordResetForm.get('new_password').valid" [class.weak]="passwordStrength==='weak'" [class.medium]="passwordStrength==='medium'">{{passwordStrength}}</span>
-          <mat-icon matSuffix class="error-field" *ngIf="!passwordResetForm.get('new_password').valid && passwordResetForm.get('new_password').touched">close</mat-icon>
-        </mat-form-field>
+  <ng-container *ngIf="is_forgot_password">
+    <ng-container *ngIf="user_id && valid_token && !is_done">
+      <div class="form password-reset" [formGroup]="passwordResetForm">
+        <h2 class="title">Reset Password Form</h2>
+        <div class="row__field new">
+          <mat-form-field class="bg-transparent" appearance="fill">
+            <mat-label>New Password *</mat-label>
+            <input matInput placeholder="New Password" type="password" formControlName="new_password">
+            <span matSuffix *ngIf="passwordResetForm.get('new_password').valid" [class.weak]="passwordStrength==='weak'" [class.medium]="passwordStrength==='medium'">{{passwordStrength}}</span>
+            <mat-icon matSuffix class="error-field" *ngIf="!passwordResetForm.get('new_password').valid && passwordResetForm.get('new_password').touched">close</mat-icon>
+          </mat-form-field>
+        </div>
+        <div class="row__field repeat">
+          <mat-form-field class="bg-transparent" appearance="fill">
+            <mat-label>Confirm Password *</mat-label>
+            <input matInput placeholder="Confirm Password" type="password" formControlName="confirm_password">
+            <mat-icon matSuffix *ngIf="passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="!(passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password) && passwordResetForm.get('confirm_password').touched">close</mat-icon>
+          </mat-form-field>
+        </div>
       </div>
-      <div class="row__field repeat">
-        <mat-form-field class="bg-transparent" appearance="fill">
-          <mat-label>Confirm Password *</mat-label>
-          <input matInput placeholder="Confirm Password" type="password" formControlName="confirm_password">
-          <mat-icon matSuffix *ngIf="passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password">done</mat-icon>
-          <mat-icon matSuffix class="error-field" *ngIf="!(passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password) && passwordResetForm.get('confirm_password').touched">close</mat-icon>
-        </mat-form-field>
+      <div class="btn-wrapper">
+        <action-button [disabled]="!(passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password)" class="reset-btn" type="flat" title="Reset" color="primary" (click)="resetPassword()"></action-button>
+        <action-button class="reset-btn" type="flat" title="Cancel" color="warn" (click)="clickCancel()"></action-button>
       </div>
-    </div>
-    <div class="btn-wrapper">
-      <action-button [disabled]="!(passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password)" class="reset-btn" type="flat" title="Reset" color="primary" (click)="resetPassword()"></action-button>
-      <action-button class="reset-btn" type="flat" title="Cancel" color="warn" (click)="clickCancel()"></action-button>
-    </div>
+    </ng-container>
+    <ng-container *ngIf="user_id && valid_token && is_done">
+      <div class="form password-reset">
+        <h2 class="title">Password successfully changed!</h2>
+      </div>
+      <div class="btn-wrapper">
+        <action-button class="reset-btn" type="flat" title="Login" color="primary" (click)="goToLoginPage()"></action-button>
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="!user_id || !valid_token">
+      <div class="form password-reset">
+        <h2 class="title">Invalid Link!</h2>
+      </div>
+      <div class="btn-wrapper">
+        <action-button class="reset-btn" type="flat" title="Login" color="primary" (click)="goToLoginPage()"></action-button>
+      </div>
+    </ng-container>
   </ng-container>
-  <ng-container *ngIf="is_done">
-    <div class="form password-reset">
-      <h2 class="title">Password successfully changed!</h2>
-    </div>
-    <div class="btn-wrapper">
-      <action-button class="reset-btn" type="flat" title="Login" color="primary" (click)="goToLoginPage()"></action-button>
-    </div>
+
+  <ng-container *ngIf="!is_forgot_password">
+    <ng-container>
+      <div class="form password-reset" [formGroup]="passwordResetForm">
+        <h2 class="title">Change Password Form</h2>
+        <div class="row__field current">
+          <mat-form-field class="bg-transparent" appearance="fill">
+            <mat-label>Current Password *</mat-label>
+            <input matInput placeholder="Current Password" type="password" formControlName="old_password">
+            <mat-icon matSuffix *ngIf="passwordResetForm.get('old_password').valid">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="!passwordResetForm.get('old_password').valid && passwordResetForm.get('old_password').touched">close</mat-icon>
+          </mat-form-field>
+        </div>
+        <div class="row__field new">
+          <mat-form-field class="bg-transparent" appearance="fill">
+            <mat-label>New Password *</mat-label>
+            <input matInput placeholder="New Password" type="password" formControlName="new_password">
+            <span matSuffix *ngIf="passwordResetForm.get('new_password').valid" [class.weak]="passwordStrength==='weak'" [class.medium]="passwordStrength==='medium'">{{passwordStrength}}</span>
+            <mat-icon matSuffix class="error-field" *ngIf="!passwordResetForm.get('new_password').valid && passwordResetForm.get('new_password').touched">close</mat-icon>
+          </mat-form-field>
+        </div>
+        <div class="row__field repeat">
+          <mat-form-field class="bg-transparent" appearance="fill">
+            <mat-label>Confirm Password *</mat-label>
+            <input matInput placeholder="Confirm Password" type="password" formControlName="confirm_password">
+            <mat-icon matSuffix *ngIf="passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="!(passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password) && passwordResetForm.get('confirm_password').touched">close</mat-icon>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="btn-wrapper">
+        <action-button [disabled]="!(passwordResetForm.valid && passwordResetForm.value.new_password === passwordResetForm.value.confirm_password)" class="reset-btn" type="flat" title="Change" color="primary" (click)="changePassword()"></action-button>
+        <action-button class="reset-btn" type="flat" title="Cancel" color="warn" (click)="clickCancel()"></action-button>
+      </div>
+    </ng-container>
   </ng-container>
 </div>
