Fix skills text

--- a/client/src/app/pages/positions/create-position/create-position.component.html
+++ b/client/src/app/pages/positions/create-position/create-position.component.html
@@ -342,7 +342,7 @@
       <h3 class="profile-form__title">
         SKILLS
       </h3>
-      <p class="headup">Increase search visibility and the quality of applicants by indicating your required and preferred skills.</p>
+      <p class="headup">Increase search visibility and the quality of applicants by indicating your required and preferred skills. Note that if an applicant doesn't match all required skills they are considered unqualified regardless of if they have all preferred skills.</p>
       <div class="profile-form__field search">
         <div class="question-container">
           <h3>Minimum Skills <span *ngIf="minimum_skills &&  minimum_skills.length > 0" class="count">{{minimum_skills.length}}</span></h3>
